# swarm_ws

./: generate_plots.py
fsmpx4/: .cursorindexingignore  CMakeLists.txt  architecture_walkthrough.md.resolved  package.xml
fsmpx4/config/: fsm.yaml
fsmpx4/docs/: swarm_controller_spec.md
fsmpx4/include/: control.h  fsm_contexts.h  fsmpx4.h  geo_utils.h  input.h  param_loader.h  timed_data.h  types.h
fsmpx4/launch/: fsmpx4_fsm.launch.py  fsmpx4_swarm_3.launch.py
fsmpx4/msg/: FSMDebug.msg
fsmpx4/script/: analyze_swarm_bag  auto_arm.py  rc.py
fsmpx4/src/: control.cpp  fsm_node.cpp  fsmpx4.cpp  input.cpp  param_loader.cpp
fsmpx4/test/: test_fsmpx4_planner_cmd.cpp
swarm_planner/: CMakeLists.txt  package.xml
swarm_planner/config/: planner.yaml
swarm_planner/include/swarm_planner/: attitude_thrust_mapper.h  geo_utils.h  param_loader.h  planner_core.h  planner_types.h  planner_utils.h  swarm_planner_core.h  swarm_planner_node.h  swarm_state_aggregator.h  types.h
swarm_planner/launch/: swarm_planner.launch.py
swarm_planner/msg/: SwarmPlannerDebug.msg
swarm_planner/script/: analyze_swarm_debug
swarm_planner/src/: main.cpp  param_loader.cpp  planner_utils.cpp  swarm_planner_core.cpp  swarm_planner_node.cpp  swarm_state_aggregator.cpp
swarm_planner/test/: test_attitude_thrust_mapper.cpp  test_swarm_planner_core.cpp  test_swarm_state_actions.cpp  test_swarm_state_aggregator.cpp
